# algorithms

./: .gitignore
c/c_ansi_algo/: CMakeLists.txt  binary-tree-queue.c  binary-tree-queue.h  binary-tree.c  binary-tree.h  main.c  quick-sort.c  quick-sort.h  utils.h
cpp/algo/: CMakeLists.txt
cpp/algo/src/: main.cpp  main.h
cpp/algo/src/recursion/: maze-solver.cpp  quicksort.cpp
cpp/algo/src/simple-algos/: binary-search.cpp  bubble-sort.cpp  two-crystal-balls-problem.cpp
cpp/algo/src/structures/: ArrayList.cpp  ArrayList.h  LinkedList.cpp  LinkedList.h  RingBuffer.cpp  RingBuffer.h  SimpleBinaryTree.cpp  SimpleBinaryTree.h  Stack.cpp  Stack.h  StringBuilder.cpp  StringBuilder.h  queue.cpp  queue.h
cpp/algo/src/utils/: program-info.cpp  program-info.h  string-utils.cpp  string-utils.h
go/kata/: go.mod
go/kata/algorithms/: binary_search.go  binary_search_test.go  two_crystal_balls.go  two_crystal_balls_test.go  two_sum.go  two_sum_test.go
go/kata/sort/: bubble_sort.go  bubble_sort_test.go  quick_sort.go  quick_sort_test.go
go/kata/structures/: min_heap.go  min_heap_test.go  queue.go  queue_test.go  ring_buffer.go  ring_buffer_test.go  stack.go  stack_test.go  tree.go  tree_test.go  trie.go  trie_test.go
java/kata/: pom.xml
javascript/: hasVowels.js  mergeArrays.js  quick_sort.js  sequence_generator.js
leetcode/: two-sum.ts
typescript/kata/: binary-tree-depth-first-search.ts  binary-tree.ts  hour-glass.ts  main.ts  queue.ts  quick_sort.ts  ring-buffer-null.ts  ring-buffer.ts  stack.ts  stack_2.ts  trie.ts  two-sum.ts
(+62 files in other folders)
